A lot of http-to-https tweaks

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ plugins:
   - jekyll-sitemap
 title: Håvard Pedersen
 description: Hjemmeside og blogg for Håvard Pedersen
-url: http://fuzzy76.net
+url: https://fuzzy76.net
 author: Håvard Pedersen
 logo: /apple-touch-icon.png
 twitter:
